--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.78f28ec0.css" as="style"><link rel="preload" href="/assets/js/app.e9f16c37.js" as="script"><link rel="preload" href="/assets/js/4.554dccb8.js" as="script"><link rel="prefetch" href="/assets/js/2.6b17e999.js"><link rel="prefetch" href="/assets/js/3.653ef183.js"><link rel="prefetch" href="/assets/js/5.87285620.js"><link rel="prefetch" href="/assets/js/6.c6c8154c.js"><link rel="prefetch" href="/assets/js/7.8afda27a.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.78f28ec0.css">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.aea359a5.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.62cbda38.js" as="script"><link rel="preload" href="/pandocs/assets/js/4.554dccb8.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.6b17e999.js"><link rel="prefetch" href="/pandocs/assets/js/3.653ef183.js"><link rel="prefetch" href="/pandocs/assets/js/5.87285620.js"><link rel="prefetch" href="/pandocs/assets/js/6.c6c8154c.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
+    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.aea359a5.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.e9f16c37.js" defer></script><script src="/assets/js/4.554dccb8.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/pandocs/assets/js/app.62cbda38.js" defer></script><script src="/pandocs/assets/js/4.554dccb8.js" defer></script>
   </body>
 </html>
