--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress</title>
+    <title>Pan Docs</title>
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.aea359a5.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.62cbda38.js" as="script"><link rel="preload" href="/pandocs/assets/js/4.554dccb8.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.6b17e999.js"><link rel="prefetch" href="/pandocs/assets/js/3.653ef183.js"><link rel="prefetch" href="/pandocs/assets/js/5.87285620.js"><link rel="prefetch" href="/pandocs/assets/js/6.c6c8154c.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
-    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.aea359a5.css">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.fa445576.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.ac4ffd8b.js" as="script"><link rel="preload" href="/pandocs/assets/js/5.882fbb48.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.0dbba3d2.js"><link rel="prefetch" href="/pandocs/assets/js/3.0878e1f0.js"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/6.b3d891ea.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
+    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.fa445576.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/pandocs/assets/js/app.62cbda38.js" defer></script><script src="/pandocs/assets/js/4.554dccb8.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/pandocs/assets/js/app.ac4ffd8b.js" defer></script><script src="/pandocs/assets/js/5.882fbb48.js" defer></script>
   </body>
 </html>
