--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.eb54e9c0.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.849362ec.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.b5641807.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
-    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.eb54e9c0.css">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.a1221fbe.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.5430f0b9.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.378e18de.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
+    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.a1221fbe.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container no-sidebar"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/pandocs/" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">Pan Docs</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="https://github.com/gbdev/pandocs" target="_blank" rel="noopener noreferrer" class="nav-link external">
   Contribute
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="https://github.com/gbdev/pandocs" target="_blank" rel="noopener noreferrer" class="nav-link external">
   Contribute
-  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="pan-docs"><a href="#pan-docs" class="header-anchor">#</a> Pan Docs</h1> <h4 id="table-of-contents"><a href="#table-of-contents" class="header-anchor">#</a> Table of Contents</h4> <p>Overview</p> <ul><li><a href="#about-the-pan-docs">About the Pan Docs</a></li> <li><a href="#specifications">Specifications</a></li> <li><a href="#memory-map">Memory Map</a></li></ul> <p>I/O Ports</p> <ul><li><a href="#video-display">Video Display</a></li> <li>Sound Controller</li> <li>Joypad Input</li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Divider Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul> <p>CPU Specifications</p> <ul><li>Registers and Flags</li> <li>Instruction Set</li> <li>Comparision with Z80</li></ul> <p>Cartridges</p> <ul><li>Cartridge header</li> <li>MBC1</li> <li>MBC2</li> <li>MBC3</li> <li>MBC5</li> <li>MBC6</li> <li>MBC7</li> <li>HuC1</li></ul> <p>Accessories</p> <ul><li>Gameboy Printer</li> <li>Gameboy Camera</li> <li>Gamegenie/Shark Cheats</li></ul> <p>Other</p> <ul><li>Power Up Sequence</li> <li>Reducing Power Consumption</li> <li>Sprite RAM Bug</li> <li>External Connectors</li></ul> <hr> <h1 id="about-the-pan-docs"><a href="#about-the-pan-docs" class="header-anchor">#</a> About the Pan Docs</h1> <div class="language- extra-class"><pre class="language-text"><code> =================================================================
+  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="pan-docs"><a href="#pan-docs" class="header-anchor">#</a> Pan Docs</h1> <p>The single, most comprehensive technical reference to Game Boy available to the public.</p> <h3 id="table-of-contents"><a href="#table-of-contents" class="header-anchor">#</a> Table of Contents</h3> <ul><li>Overview
+<ul><li><a href="#about-the-pan-docs">About the Pan Docs</a></li> <li><a href="#specifications">Specifications</a></li> <li><a href="#memory-map">Memory Map</a></li></ul></li> <li>I/O Ports
+<ul><li><a href="#video-display">Video Display</a></li> <li>Sound Controller</li> <li>Joypad Input</li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Divider Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul></li> <li>CPU Specifications
+<ul><li>Registers and Flags</li> <li>Instruction Set</li> <li>Comparision with Z80</li></ul></li> <li>Cartridges
+<ul><li>Cartridge header</li> <li>MBC1</li> <li>MBC2</li> <li>MBC3</li> <li>MBC5</li> <li>MBC6</li> <li>MBC7</li> <li>HuC1</li></ul></li> <li>Accessories
+<ul><li>Gameboy Printer</li> <li>Gameboy Camera</li> <li>Gamegenie/Shark Cheats</li></ul></li> <li>Other
+<ul><li>Power Up Sequence</li> <li>Reducing Power Consumption</li> <li>Sprite RAM Bug</li> <li>External Connectors</li></ul></li></ul> <hr> <h1 id="about-the-pan-docs"><a href="#about-the-pan-docs" class="header-anchor">#</a> About the Pan Docs</h1> <div class="language- extra-class"><pre class="language-text"><code> =================================================================
        Everything You Always Wanted To Know About GAMEBOY *
  =================================================================
 
@@ -254,14 +260,14 @@ bits of the address are ignored (treated as zero), the upper 3 bits are
 ignored either (destination is always in VRAM).</p> <p>Writing to this register starts the transfer, the lower 7 bits of which
 specify the Transfer Length (divided by 10h, minus 1), ie. lengths of
 10h-800h bytes can be defined by the values 00h-7Fh. The upper bit
-indicates the Transfer Mode:</p> <h5 id="bit7-0-general-purpose-dma"><a href="#bit7-0-general-purpose-dma" class="header-anchor">#</a> Bit7=0 - General Purpose DMA</h5> <p>When using this transfer method,
+indicates the Transfer Mode:</p> <p><strong>Bit7=0 - General Purpose DMA</strong></p> <p>When using this transfer method,
 all data is transferred at once. The execution of the program is halted
 until the transfer has completed. Note that the General Purpose DMA
 blindly attempts to copy the data, even if the LCD controller is
 currently accessing VRAM. So General Purpose DMA should be used only if
 the Display is disabled, or during V-Blank, or (for rather short blocks)
 during H-Blank. The execution of the program continues when the transfer
-has been completed, and FF55 then contains a value of FFh.</p> <h5 id="bit7-1-h-blank-dma"><a href="#bit7-1-h-blank-dma" class="header-anchor">#</a> Bit7=1 - H-Blank DMA</h5> <p>The H-Blank DMA transfers 10h bytes of
+has been completed, and FF55 then contains a value of FFh.</p> <p><strong>Bit7=1 - H-Blank DMA</strong></p> <p>The H-Blank DMA transfers 10h bytes of
 data during each H-Blank, ie. at LY=0-143, no data is transferred during
 V-Blank (LY=144-153), but the transfer will then continue at LY=00. The
 execution of the program is halted during the separate transfers, but
@@ -459,6 +465,6 @@ above mentioned DMA function would be more recommended anyways.</p> <h4 id="note
 time. The downside is that the screen is blank (white) during this
 period, so that disabling the display would be recommended only during
 initialization.</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/pandocs/assets/js/app.849362ec.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.b5641807.js" defer></script>
+    <script src="/pandocs/assets/js/app.5430f0b9.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.378e18de.js" defer></script>
   </body>
 </html>
