--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.5e6a29f6.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.9e66a8af.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.2d4c4177.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.353a9590.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
     <link rel="stylesheet" href="/pandocs/assets/css/0.styles.d2a81c02.css">
   </head>
   <body>
@@ -17,7 +17,7 @@
   Contribute
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="pan-docs"><a href="#pan-docs" class="header-anchor">#</a> Pan Docs</h1> <p>The single, most comprehensive technical reference to Game Boy available to the public.</p> <h3 id="table-of-contents"><a href="#table-of-contents" class="header-anchor">#</a> Table of Contents</h3> <ul><li>Overview
 <ul><li><a href="#about-the-pan-docs">About the Pan Docs</a></li> <li><a href="#specifications">Specifications</a></li> <li><a href="#memory-map">Memory Map</a></li></ul></li> <li>I/O Ports
-<ul><li><a href="#video-display">Video Display</a></li> <li><a href="#sound-controller">Sound Controller</a></li> <li>Joypad Input</li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Divider Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul></li> <li>CPU Specifications
+<ul><li><a href="#video-display">Video Display</a></li> <li><a href="#sound-controller">Sound Controller</a></li> <li><a href="#joypad-input">Joypad Input</a></li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Divider Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul></li> <li>CPU Specifications
 <ul><li>Registers and Flags</li> <li>Instruction Set</li> <li>Comparision with Z80</li></ul></li> <li>Cartridges
 <ul><li>Cartridge header</li> <li>MBC1</li> <li>MBC2</li> <li>MBC3</li> <li>MBC5</li> <li>MBC6</li> <li>MBC7</li> <li>HuC1</li></ul></li> <li>Accessories
 <ul><li>Gameboy Printer</li> <li>Gameboy Camera</li> <li>Gamegenie/Shark Cheats</li></ul></li> <li>Other
@@ -280,7 +280,7 @@ minus 1), a value of 0FFh indicates that the transfer has completed. It
 is also possible to terminate an active H-Blank transfer by writing zero
 to Bit 7 of FF55. In that case reading from FF55 will return how many
 $10 &quot;blocks&quot; remained (minus 1) in the lower 7 bits, but Bit 7 will
-be read as &quot;1&quot;. Stopping the transfer doesn't set HDMA1-4 to $FF.</p> <div class="custom-block tip"><p class="custom-block-title">TIP</p> <p>Precautions:</p> <p>H-Blank DMA should not be started (write to FF55) during a H-Blank
+be read as &quot;1&quot;. Stopping the transfer doesn't set HDMA1-4 to $FF.</p> <div class="custom-block tip"><p class="custom-block-title">WARNING</p> <p>H-Blank DMA should not be started (write to FF55) during a H-Blank
 period (STAT mode 0).</p> <p>If the transfer's destination address overflows, the transfer stops
 prematurely. [Note : what's the state of the registers if this happens
 ?]</p></div> <h4 id="confirming-if-the-dma-transfer-is-active"><a href="#confirming-if-the-dma-transfer-is-active" class="header-anchor">#</a> Confirming if the DMA Transfer is Active</h4> <p>Reading Bit 7 of FF55 can be used to confirm if the DMA transfer is
@@ -417,7 +417,7 @@ copy that RAM to OAM by using the DMA transfer function, initiated
 through DMA register (FF46). Beside for that, it is also possible to
 write data directly to the OAM area by using normal LD commands, this
 works only during the H-Blank and V-Blank periods. The current state of
-the LCD controller can be read out from the STAT register (FF41).</p> <h2 id="accessing-vram-and-oam"><a href="#accessing-vram-and-oam" class="header-anchor">#</a> Accessing VRAM and OAM</h2> <h4 id="caution"><a href="#caution" class="header-anchor">#</a> CAUTION</h4> <p>When the LCD Controller is drawing the screen it is directly reading
+the LCD controller can be read out from the STAT register (FF41).</p> <h2 id="accessing-vram-and-oam"><a href="#accessing-vram-and-oam" class="header-anchor">#</a> Accessing VRAM and OAM</h2> <div class="custom-block warning"><p class="custom-block-title">CAUTION</p> <p>When the LCD Controller is drawing the screen it is directly reading
 from Video Memory (VRAM) and from the Sprite Attribute Table (OAM).
 During these periods the Gameboy CPU may not access the VRAM and OAM.
 That means, any attempts to write to VRAM/OAM are ignored (the data
@@ -428,7 +428,7 @@ reading the Mode Bits from the STAT Register (FF41). When doing this (as
 described in the examples below) you should take care that no interrupts
 occur between the wait loops and the following memory access - the
 memory is guaranteed to be accessible only for a few cycles directly
-after the wait loops have completed.</p> <h4 id="vram-memory-at-8000h-9fffh-is-accessible-during-mode-0-2"><a href="#vram-memory-at-8000h-9fffh-is-accessible-during-mode-0-2" class="header-anchor">#</a> VRAM (memory at 8000h-9FFFh) is accessible during Mode 0-2</h4> <div class="language- extra-class"><pre class="language-text"><code>Mode 0 - H-Blank Period,
+after the wait loops have completed.</p></div> <h4 id="vram-memory-at-8000h-9fffh-is-accessible-during-mode-0-2"><a href="#vram-memory-at-8000h-9fffh-is-accessible-during-mode-0-2" class="header-anchor">#</a> VRAM (memory at 8000h-9FFFh) is accessible during Mode 0-2</h4> <div class="language- extra-class"><pre class="language-text"><code>Mode 0 - H-Blank Period,
 Mode 1 - V-Blank Period, and
 Mode 2 - Searching OAM Period
 </code></pre></div><p>A typical procedure that waits for accessibility of VRAM would be:</p> <div class="language- extra-class"><pre class="language-text"><code>ld   hl,0FF41h    ;-STAT Register
@@ -461,10 +461,10 @@ procedure that waits for accessibility of OAM Memory would be:</p> <div class="l
 </code></pre></div><p>The two wait loops ensure that Mode 0 or 1 will last for a few clock
 cycles after completion of the procedure. In V-Blank period it might be
 recommended to skip the whole procedure - and in most cases using the
-above mentioned DMA function would be more recommended anyways.</p> <h4 id="note"><a href="#note" class="header-anchor">#</a> Note</h4> <p>When the display is disabled, both VRAM and OAM are accessible at any
+above mentioned DMA function would be more recommended anyways.</p> <div class="custom-block tip"><p class="custom-block-title">NOTE</p> <p>When the display is disabled, both VRAM and OAM are accessible at any
 time. The downside is that the screen is blank (white) during this
 period, so that disabling the display would be recommended only during
-initialization.</p> <h1 id="sound-controller"><a href="#sound-controller" class="header-anchor">#</a> Sound Controller</h1> <p>There are two sound channels connected to the output terminals SO1 and
+initialization.</p></div> <h1 id="sound-controller"><a href="#sound-controller" class="header-anchor">#</a> Sound Controller</h1> <p>There are two sound channels connected to the output terminals SO1 and
 SO2. There is also a input terminal Vin connected to the cartridge. It
 can be routed to either of both output terminals. GameBoy circuitry
 allows producing sound in four different ways:</p> <div class="language- extra-class"><pre class="language-text"><code>Quadrangular wave patterns with sweep and envelope functions
@@ -601,7 +601,33 @@ done analogically, it's instead done digitally; then, sound is
 converted to an analog signal and an offset is added (see SOUNDBIAS in
 <a href="http://problemkaputt.de/gbatek.htm#gbasoundcontrolregisters" target="_blank" rel="noopener noreferrer">GBATEK<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a>
 for more details.</p> <p>This means that the APU has no DACs, or if modelling the GBA as a GB,
-they're always on.</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/pandocs/assets/js/app.5e6a29f6.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.9e66a8af.js" defer></script>
+they're always on.</p> <h1 id="joypad-input"><a href="#joypad-input" class="header-anchor">#</a> Joypad Input</h1> <h4 id="ff00-p1-joyp-joypad-r-w"><a href="#ff00-p1-joyp-joypad-r-w" class="header-anchor">#</a> FF00 - P1/JOYP - Joypad (R/W)</h4> <p>The eight gameboy buttons/direction keys are arranged in form of a 2x4
+matrix. Select either button or direction keys by writing to this
+register, then read-out bit 0-3.</p> <div class="language- extra-class"><pre class="language-text"><code>Bit 7 - Not used
+Bit 6 - Not used
+Bit 5 - P15 Select Button Keys      (0=Select)
+Bit 4 - P14 Select Direction Keys   (0=Select)
+Bit 3 - P13 Input Down  or Start    (0=Pressed) (Read Only)
+Bit 2 - P12 Input Up    or Select   (0=Pressed) (Read Only)
+Bit 1 - P11 Input Left  or Button B (0=Pressed) (Read Only)
+Bit 0 - P10 Input Right or Button A (0=Pressed) (Read Only)
+</code></pre></div><div class="custom-block tip"><p class="custom-block-title">NOTE</p> <p>Most programs are repeatedly reading from this port several times
+(the first reads used as short delay, allowing the inputs to stabilize,
+and only the value from the last read actually used).</p></div> <h4 id="usage-in-sgb-software"><a href="#usage-in-sgb-software" class="header-anchor">#</a> Usage in SGB software</h4> <p>Beside for normal joypad input, SGB games mis-use the joypad register to
+output SGB command packets to the SNES, also, SGB programs may read out
+gamepad states from up to four different joypads which can be connected
+to the SNES. See SGB description for details.</p> <h4 id="int-60-joypad-interrupt"><a href="#int-60-joypad-interrupt" class="header-anchor">#</a> INT 60 - Joypad Interrupt</h4> <p>Joypad interrupt is requested when any of the above Input lines changes
+from High to Low. Generally this should happen when a key becomes
+pressed (provided that the button/direction key is enabled by above
+Bit4/5), however, because of switch bounce, one or more High to Low
+transitions are usually produced both when pressing or releasing a key.</p> <h4 id="using-the-joypad-interrupt"><a href="#using-the-joypad-interrupt" class="header-anchor">#</a> Using the Joypad Interrupt</h4> <p>It's more or less useless for programmers, even when selecting both
+buttons and direction keys simultaneously it still cannot recognize all
+keystrokes, because in that case a bit might be already held low by a
+button key, and pressing the corresponding direction key would thus
+cause no difference. The only meaningful purpose of the keystroke
+interrupt would be to terminate STOP (low power) standby state. GBA SP,
+because of the different buttons used, seems to not be affected by
+switch bounce.</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/pandocs/assets/js/app.2d4c4177.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.353a9590.js" defer></script>
   </body>
 </html>
