--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.2d4c4177.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.353a9590.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.20e17b92.js" as="script"><link rel="preload" href="/pandocs/assets/js/3.996332f8.js" as="script"><link rel="preload" href="/pandocs/assets/js/2.0dbba3d2.js" as="script"><link rel="preload" href="/pandocs/assets/js/6.beb21b2f.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/4.4bd7a494.js"><link rel="prefetch" href="/pandocs/assets/js/5.882fbb48.js"><link rel="prefetch" href="/pandocs/assets/js/7.8afda27a.js">
     <link rel="stylesheet" href="/pandocs/assets/css/0.styles.d2a81c02.css">
   </head>
   <body>
@@ -17,7 +17,7 @@
   Contribute
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <!----> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="pan-docs"><a href="#pan-docs" class="header-anchor">#</a> Pan Docs</h1> <p>The single, most comprehensive technical reference to Game Boy available to the public.</p> <h3 id="table-of-contents"><a href="#table-of-contents" class="header-anchor">#</a> Table of Contents</h3> <ul><li>Overview
 <ul><li><a href="#about-the-pan-docs">About the Pan Docs</a></li> <li><a href="#specifications">Specifications</a></li> <li><a href="#memory-map">Memory Map</a></li></ul></li> <li>I/O Ports
-<ul><li><a href="#video-display">Video Display</a></li> <li><a href="#sound-controller">Sound Controller</a></li> <li><a href="#joypad-input">Joypad Input</a></li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Divider Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul></li> <li>CPU Specifications
+<ul><li><a href="#video-display">Video Display</a></li> <li><a href="#sound-controller">Sound Controller</a></li> <li><a href="#joypad-input">Joypad Input</a></li> <li>Serial Data Transfer (Link Cable)</li> <li>Timer and Dividr Registers</li> <li>Interrupts</li> <li>CGB Registers</li> <li>SGB Functions</li></ul></li> <li>CPU Specifications
 <ul><li>Registers and Flags</li> <li>Instruction Set</li> <li>Comparision with Z80</li></ul></li> <li>Cartridges
 <ul><li>Cartridge header</li> <li>MBC1</li> <li>MBC2</li> <li>MBC3</li> <li>MBC5</li> <li>MBC6</li> <li>MBC7</li> <li>HuC1</li></ul></li> <li>Accessories
 <ul><li>Gameboy Printer</li> <li>Gameboy Camera</li> <li>Gamegenie/Shark Cheats</li></ul></li> <li>Other
@@ -54,7 +54,8 @@ GBs as well as on CGB and GBA. Some emulators (such as VisualBoyAdvance
 properly emulated by writing to WRAM (avoid values 00 and FF) and
 checking if said value is mirrored in Echo RAM.</p> <h2 id="fea0-feff-range"><a href="#fea0-feff-range" class="header-anchor">#</a> FEA0-FEFF range</h2> <p>This range is very poorly documented. It doesn't even have a name !
 From my experience, this stays 00 on DMG, and alternates between 00 and
-seemingly random values on CGB.</p> <h1 id="video-display"><a href="#video-display" class="header-anchor">#</a> Video Display</h1> <h2 id="lcd-control-register"><a href="#lcd-control-register" class="header-anchor">#</a> LCD Control Register</h2> <p>Detailed article: <a href="LCDC" title="wikilink">LCDC</a></p> <div class="language- extra-class"><pre class="language-text"><code>Bit 7 - LCD Display Enable             (0=Off, 1=On)
+seemingly random values on CGB.</p> <h1 id="video-display"><a href="#video-display" class="header-anchor">#</a> Video Display</h1> <h2 id="lcd-control-register"><a href="#lcd-control-register" class="header-anchor">#</a> LCD Control Register</h2> <p><strong>LCDC</strong> is the main <strong>LCD C</strong>ontrol register. Its bits toggle what
+elements are displayed on the screen, and how.</p> <div class="language- extra-class"><pre class="language-text"><code>Bit 7 - LCD Display Enable             (0=Off, 1=On)
 Bit 6 - Window Tile Map Display Select (0=9800-9BFF, 1=9C00-9FFF)
 Bit 5 - Window Display Enable          (0=Off, 1=On)
 Bit 4 - BG &amp; Window Tile Data Select   (0=8800-97FF, 1=8000-8FFF)
@@ -62,7 +63,41 @@ Bit 3 - BG Tile Map Display Select     (0=9800-9BFF, 1=9C00-9FFF)
 Bit 2 - OBJ (Sprite) Size              (0=8x8, 1=8x16)
 Bit 1 - OBJ (Sprite) Display Enable    (0=Off, 1=On)
 Bit 0 - BG/Window Display/Priority     (0=Off, 1=On)
-</code></pre></div><h2 id="lcd-status-register"><a href="#lcd-status-register" class="header-anchor">#</a> LCD Status Register</h2> <h4 id="ff41-stat-lcdc-status-r-w"><a href="#ff41-stat-lcdc-status-r-w" class="header-anchor">#</a> FF41 - STAT - LCDC Status (R/W)</h4> <div class="language- extra-class"><pre class="language-text"><code>Bit 6 - LYC=LY Coincidence Interrupt (1=Enable) (Read/Write)
+</code></pre></div><h3 id="lcdc-7-lcd-display-enable"><a href="#lcdc-7-lcd-display-enable" class="header-anchor">#</a> LCDC.7 - LCD Display Enable</h3> <p>This bit controls whether the LCD is on and the PPU is active. Setting
+it to 0 turns both off, which grants immediate and full access to VRAM,
+OAM, etc.</p> <div class="custom-block warning"><p class="custom-block-title">WARNING</p> <p>Stopping LCD operation (Bit 7 from 1 to 0) may be performed
+during <a href="VBlank" title="wikilink">VBlank</a> ONLY, disabling the display outside
+of the V-Blank period may damage the hardware by burning in a black
+horizontal line similar to that which appears when the GB is turned off.
+This appears to be a serious issue, Nintendo is reported to reject any
+games that do not follow this rule.</p></div> <p>When the display is disabled the screen is blank, which on DMG is
+displayed as a white &quot;whiter&quot; than color #0.</p> <p>On SGB, the screen doesn't turn white, it appears that the previous
+picture sticks to the screen. (TODO: research this more.)</p> <p>When re-enabling the LCD, the PPU will immediately start drawing again,
+but the screen will stay blank during the first frame.</p> <h3 id="lcdc-6-window-tile-map-display-select"><a href="#lcdc-6-window-tile-map-display-select" class="header-anchor">#</a> LCDC.6 - Window Tile Map Display Select</h3> <p>This bit controls which background map the Window uses for rendering.
+When it's reset, the $9800 tilemap is used, otherwise it's the $9C00
+one.</p> <h3 id="lcdc-5-window-display-enable"><a href="#lcdc-5-window-display-enable" class="header-anchor">#</a> LCDC.5 - Window Display Enable</h3> <p>This bit controls whether the window shall be displayed or not. (TODO :
+what happens when toggling this mid-scanline ?) This bit is overridden
+on DMG by <a href="#LCDC.0_-_BG.2FWindow_Display.2FPriority" title="wikilink">bit 0</a>
+if that bit is reset.</p> <p>Note that on CGB models, setting this bit to 0 then back to 1 mid-frame
+may cause the second write to be ignored. (TODO : test this.)</p> <h3 id="lcdc-4-bg-window-tile-data-select"><a href="#lcdc-4-bg-window-tile-data-select" class="header-anchor">#</a> LCDC.4 - BG &amp; Window Tile Data Select</h3> <p>This bit controls which <a href="Video_Display#VRAM_Tile_Data" title="wikilink">addressing
+mode</a> the BG and Window use to
+pick tiles.</p> <p>Sprites aren't affected by this, and will always use $8000 addressing
+mode.</p> <h3 id="lcdc-3-bg-tile-map-display-select"><a href="#lcdc-3-bg-tile-map-display-select" class="header-anchor">#</a> LCDC.3 - BG Tile Map Display Select</h3> <p>This bit works similarly to LCDC-6: if the bit is
+reset, the BG uses tilemap $9800, otherwise tilemap $9C00.</p> <h3 id="lcdc-2-obj-size"><a href="#lcdc-2-obj-size" class="header-anchor">#</a> LCDC.2 - OBJ Size</h3> <p>This bit controls the sprite size (1 tile or 2 stacked vertically).</p> <p>Be cautious when changing this mid-frame from 8x8 to 8x16 : &quot;remnants&quot;
+of the sprites intended for 8x8 could &quot;leak&quot; into the 8x16 zone and
+cause artifacts.</p> <h3 id="lcdc-1-obj-display-enable"><a href="#lcdc-1-obj-display-enable" class="header-anchor">#</a> LCDC.1 - OBJ Display Enable</h3> <p>This bit toggles whether sprites are displayed or not.</p> <p>This can be toggled mid-frame, for example to avoid sprites being
+displayed on top of a status bar or text box.</p> <p>(Note: toggling mid-scanline might have funky results on DMG?
+Investigation needed.)</p> <h3 id="lcdc-0-bg-window-display-priority"><a href="#lcdc-0-bg-window-display-priority" class="header-anchor">#</a> LCDC.0 - BG/Window Display/Priority</h3> <p>LCDC.0 has different meanings depending on Gameboy type and Mode:</p> <h4 id="monochrome-gameboy-sgb-and-cgb-in-non-cgb-mode-bg-display"><a href="#monochrome-gameboy-sgb-and-cgb-in-non-cgb-mode-bg-display" class="header-anchor">#</a> Monochrome Gameboy, SGB and CGB in Non-CGB Mode: BG Display</h4> <p>When Bit 0 is cleared, both background and window become blank (white),
+and the <a href="#LCDC.5_-_Window_Display_Enable" title="wikilink">Window Display Bit</a>
+is ignored in that case. Only Sprites may still be displayed (if enabled
+in Bit 1).</p> <h4 id="cgb-in-cgb-mode-bg-and-window-master-priority"><a href="#cgb-in-cgb-mode-bg-and-window-master-priority" class="header-anchor">#</a> CGB in CGB Mode: BG and Window Master Priority</h4> <p>When Bit 0 is cleared, the background and window lose their priority -
+the sprites will be always displayed on top of background and window,
+independently of the priority flags in OAM and BG Map attributes.</p> <h3 id="using-lcdc"><a href="#using-lcdc" class="header-anchor">#</a> Using LCDC</h3> <p>LCDC is a powerful tool: each bit controls a lot of behavior, and can be
+modified at any time during the frame.</p> <p>One of the important aspects of LCDC is that unlike VRAM, the PPU never
+locks it. It's thus possible to modify it mid-scanline!</p> <h3 id="faux-layer-textbox-status-bar"><a href="#faux-layer-textbox-status-bar" class="header-anchor">#</a> Faux-layer textbox/status bar</h3> <p>A problem often seen especially in NES games is sprites rendering on top
+of the textbox/status bar. It's possible to prevent this using LCDC if
+the textbox/status bar is &quot;alone&quot; on its scanlines:</p> <ul><li>Set LCDC.1 to 1 for gameplay scanlines</li> <li>Set LCDC.1 to 0 for textbox/status bar scanlines</li></ul> <p>Usually, these bars are either at the top or bottom of the screen, so
+the bit can be set by the <a href="VBlank_handler" title="wikilink">VBlank handler</a></p> <h2 id="lcd-status-register"><a href="#lcd-status-register" class="header-anchor">#</a> LCD Status Register</h2> <h4 id="ff41-stat-lcdc-status-r-w"><a href="#ff41-stat-lcdc-status-r-w" class="header-anchor">#</a> FF41 - STAT - LCDC Status (R/W)</h4> <div class="language- extra-class"><pre class="language-text"><code>Bit 6 - LYC=LY Coincidence Interrupt (1=Enable) (Read/Write)
 Bit 5 - Mode 2 OAM Interrupt         (1=Enable) (Read/Write)
 Bit 4 - Mode 1 V-Blank Interrupt     (1=Enable) (Read/Write)
 Bit 3 - Mode 0 H-Blank Interrupt     (1=Enable) (Read/Write)
@@ -280,7 +315,7 @@ minus 1), a value of 0FFh indicates that the transfer has completed. It
 is also possible to terminate an active H-Blank transfer by writing zero
 to Bit 7 of FF55. In that case reading from FF55 will return how many
 $10 &quot;blocks&quot; remained (minus 1) in the lower 7 bits, but Bit 7 will
-be read as &quot;1&quot;. Stopping the transfer doesn't set HDMA1-4 to $FF.</p> <div class="custom-block tip"><p class="custom-block-title">WARNING</p> <p>H-Blank DMA should not be started (write to FF55) during a H-Blank
+be read as &quot;1&quot;. Stopping the transfer doesn't set HDMA1-4 to $FF.</p> <div class="custom-block warning"><p class="custom-block-title">WARNING</p> <p>H-Blank DMA should not be started (write to FF55) during a H-Blank
 period (STAT mode 0).</p> <p>If the transfer's destination address overflows, the transfer stops
 prematurely. [Note : what's the state of the registers if this happens
 ?]</p></div> <h4 id="confirming-if-the-dma-transfer-is-active"><a href="#confirming-if-the-dma-transfer-is-active" class="header-anchor">#</a> Confirming if the DMA Transfer is Active</h4> <p>Reading Bit 7 of FF55 can be used to confirm if the DMA transfer is
@@ -628,6 +663,6 @@ cause no difference. The only meaningful purpose of the keystroke
 interrupt would be to terminate STOP (low power) standby state. GBA SP,
 because of the different buttons used, seems to not be affected by
 switch bounce.</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/pandocs/assets/js/app.2d4c4177.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.353a9590.js" defer></script>
+    <script src="/pandocs/assets/js/app.20e17b92.js" defer></script><script src="/pandocs/assets/js/3.996332f8.js" defer></script><script src="/pandocs/assets/js/2.0dbba3d2.js" defer></script><script src="/pandocs/assets/js/6.beb21b2f.js" defer></script>
   </body>
 </html>
