--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.4c61aa13.js" as="script"><link rel="preload" href="/pandocs/assets/js/5.882fbb48.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.0dbba3d2.js"><link rel="prefetch" href="/pandocs/assets/js/3.996332f8.js"><link rel="prefetch" href="/pandocs/assets/js/4.7a4cca3d.js"><link rel="prefetch" href="/pandocs/assets/js/6.f4344271.js"><link rel="prefetch" href="/pandocs/assets/js/7.87c0b7de.js"><link rel="prefetch" href="/pandocs/assets/js/8.8c4ddf07.js">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.d2a81c02.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.336660b1.js" as="script"><link rel="preload" href="/pandocs/assets/js/5.882fbb48.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.0dbba3d2.js"><link rel="prefetch" href="/pandocs/assets/js/3.996332f8.js"><link rel="prefetch" href="/pandocs/assets/js/4.7a4cca3d.js"><link rel="prefetch" href="/pandocs/assets/js/6.f4344271.js"><link rel="prefetch" href="/pandocs/assets/js/7.f2779804.js"><link rel="prefetch" href="/pandocs/assets/js/8.8c4ddf07.js">
     <link rel="stylesheet" href="/pandocs/assets/css/0.styles.d2a81c02.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/pandocs/assets/js/app.4c61aa13.js" defer></script><script src="/pandocs/assets/js/5.882fbb48.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/pandocs/assets/js/app.336660b1.js" defer></script><script src="/pandocs/assets/js/5.882fbb48.js" defer></script>
   </body>
 </html>
