--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/pandocs/assets/css/0.styles.c899014a.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.c059ddfe.js" as="script"><link rel="preload" href="/pandocs/assets/js/5.882fbb48.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.0dbba3d2.js"><link rel="prefetch" href="/pandocs/assets/js/3.ee2c9a56.js"><link rel="prefetch" href="/pandocs/assets/js/4.7a4cca3d.js"><link rel="prefetch" href="/pandocs/assets/js/6.040eadb3.js"><link rel="prefetch" href="/pandocs/assets/js/7.2377de72.js"><link rel="prefetch" href="/pandocs/assets/js/8.8c4ddf07.js">
-    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.c899014a.css">
+    <link rel="preload" href="/pandocs/assets/css/0.styles.d80b0b09.css" as="style"><link rel="preload" href="/pandocs/assets/js/app.c059ddfe.js" as="script"><link rel="preload" href="/pandocs/assets/js/5.882fbb48.js" as="script"><link rel="prefetch" href="/pandocs/assets/js/2.0dbba3d2.js"><link rel="prefetch" href="/pandocs/assets/js/3.ee2c9a56.js"><link rel="prefetch" href="/pandocs/assets/js/4.7a4cca3d.js"><link rel="prefetch" href="/pandocs/assets/js/6.040eadb3.js"><link rel="prefetch" href="/pandocs/assets/js/7.2377de72.js"><link rel="prefetch" href="/pandocs/assets/js/8.8c4ddf07.js">
+    <link rel="stylesheet" href="/pandocs/assets/css/0.styles.d80b0b09.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/pandocs/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
     <script src="/pandocs/assets/js/app.c059ddfe.js" defer></script><script src="/pandocs/assets/js/5.882fbb48.js" defer></script>
   </body>
 </html>
